[package]
name = "AdventofCode2019"
version = "0.1.0"
authors = ["Michael J. P. Morse <7416190+mjpmorse@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.13.0"
regex = "1.11.1"
nalgebra = "0.33.2"
anyhow = "1.0.95"
clap = { version = "4.5.26", features = ["derive"] }